--- a/MobileCamApp/MobileCamApp/Base.lproj/Localizable.strings
+++ b/MobileCamApp/MobileCamApp/Base.lproj/Localizable.strings
@@ -289,3 +289,4 @@
 "SetFastMotionMovie" = "Fast Motion Movie";
 "SetWindNoiseReduction" = "Wind Noise Reduction";
 "CleanTempCompleted" = "Clean Completed!";
+"CanceledDownload" = "Canceled Download";
