--- a/MobileCamApp/MobileCamApp/ja.lproj/Localizable.strings
+++ b/MobileCamApp/MobileCamApp/ja.lproj/Localizable.strings
@@ -284,3 +284,4 @@
 "SetFastMotionMovie" = "Fast Motion Movie";
 "SetWindNoiseReduction" = "Wind Noise Reduction";
 "CleanTempCompleted" = "Clean Completed!";
+"CanceledDownload" = "キャンセルされたダウンロード";
