--- a/MobileCamApp/MobileCamApp/zh-Hans.lproj/Localizable.strings
+++ b/MobileCamApp/MobileCamApp/zh-Hans.lproj/Localizable.strings
@@ -301,3 +301,4 @@
 "SetFastMotionMovie" = "快录";
 "SetWindNoiseReduction" = "降噪";
 "CleanTempCompleted" = "应用空间已清理完成 !";
+"CanceledDownload" = "已取消下载";
