--- a/MobileCamApp/MobileCamApp/zh-Hant.lproj/Localizable.strings
+++ b/MobileCamApp/MobileCamApp/zh-Hant.lproj/Localizable.strings
@@ -298,3 +298,4 @@
 "SetFastMotionMovie" = "快錄";
 "SetWindNoiseReduction" = "降噪";
 "CleanTempCompleted" = "暫存空間已清理完成 !";
+"CanceledDownload" = "已取消下載";
