--- a/MobileCamApp/MobileCamApp/pl.lproj/Localizable.strings
+++ b/MobileCamApp/MobileCamApp/pl.lproj/Localizable.strings
@@ -325,3 +325,4 @@
 "SetFastMotionMovie" = "Fast Motion Movie";
 "SetWindNoiseReduction" = "Wind Noise Reduction";
 "CleanTempCompleted" = "Clean Completed!";
+"CanceledDownload" = "Canceled Download";
